--- a/timeline.html
+++ b/timeline.html
@@ -71,7 +71,7 @@
     var margin      = {top: 0, right: 0, bottom: 30, left: 0};
     var outerWidth  = document.documentElement.clientWidth;
     var outerHeight = document.documentElement.clientHeight;
-    var startOfDayHour = 14; //used for fake data
+    var startOfDayHour = 12; //used for fake data
     var stations =   {
                       0:"En Route",
                       1:"Sierra One",
@@ -193,6 +193,7 @@
       
       var data = d3.nest() // groupByStation
           .key(function(d) { return d.currentStation; })
+          .sortValues(function(a,b) { return b.values[0].endTime - a.values[0].endTime; })
           .entries(data);
 
       data = stackDeliveriesCalc(stationStackedCount,data); // set the yIndex for every delivery (make sure )
@@ -259,14 +260,14 @@
           })
           .attr("class", "workflow");
 
-      var workflowsSelectAllText = deliveriesSelectAll.selectAll(".workflow").data(function(d){
-        return d.values;
-      });
-      workflowsSelectAllText.insert().append("text");
-      workflowsSelectAllText
-          .attr("x",function(d,i){  return xScale(d.endTime); })
-          .attr("y",1)
-          .text("d1");
+      // var workflowsSelectAllText = deliveriesSelectAll.selectAll(".workflow").data(function(d){
+      //   return d.values;
+      // });
+      // workflowsSelectAllText.insert().append("text");
+      // workflowsSelectAllText
+      //     .attr("x",function(d,i){  return xScale(d.endTime); })
+      //     .attr("y",1)
+      //     .text("d1");
 
     }
 
@@ -332,28 +333,32 @@
     function updateCurrentStationCalc(data){//update every delivery w/ its current station
       var workflow;
       var currentStation = 0;
-
+      var isCurrentUpdated = false;
       var now = new Date(Date.now());
       console.log('updateCurrentStationCalc',data);
       // debugger;
       //assums workflows are in ascending order
       for (var i = 0; i < data.length; i++) {
         currentStation = 0;
-
-
+        isCurrentUpdated = false;
+        console.log(now);
         for (var j = 0; j < data[i].values.length; j++) {
            workflow = data[i].values[j];
 
           // debugger;
-          // if(now < workflow.endTime){
-          //   currentStation = workflow.station;
-          //   console.log(currentStation);
-          // }
-
-          if(isTimeBetweenTime(now,workflow.startTime,workflow.endTime)){
-            currentStation = workflow.station;
-            // debugger;
+          console.log(workflow);
+          if(!isCurrentUpdated){
+            if(now < workflow.endTime){
+              currentStation = workflow.station;
+              isCurrentUpdated = true;
+              console.log(currentStation);
+            }
           }
+
+          // if(isTimeBetweenTime(now,workflow.startTime,workflow.endTime)){
+          //   currentStation = workflow.station;
+          //   // debugger;
+          // }
         }
       
         if(currentStation == 0){
@@ -426,7 +431,6 @@
 
       for (var i = 0; i < stationData.length; i++) {
         for (var j = 0; j < stationData[i].values.length; j++) {
-console.log(i);
             if(stationData[i].key == 0){
               stationData[i].values[j].yIndex = j;
             }else {
