--- a/timeline.html
+++ b/timeline.html
@@ -197,7 +197,6 @@
           .entries(data);
 
       data = stackDeliveriesCalc(stationStackedCount,data); // set the yIndex for every delivery (make sure )
-      console.log('stackDeliveriesCalc',data);
 
       // Setup stations overlay and text
       var stationsSelectAll = stationsGroup.selectAll(".station").data(stationStacked);
@@ -223,7 +222,8 @@
           .attr("x1", xScale(now))
           .attr("y1", margin.top)
           .attr("x2", xScale(now))
-          .attr("y2", stationHeight+ xAxisHeight);
+          .attr("y2", Math.max(stationHeight+ xAxisHeight, outerHeight));
+      console.log('setting yaxis');  
 
 
       // Setup Stations
@@ -249,25 +249,10 @@
       workflowsSelectAll.exit().remove();
       workflowsSelectAll
           .attr("x1", function(d,i) { return xScale(d.startTime); })
-          .attr("y1", function(d,i) { 
-              return 0;
-              // return yDeliveryScale(d.yIndex); 
-            })
+          .attr("y1", function(d,i) { return 0;})
           .attr("x2", function(d,i) { return xScale(d.endTime); })
-          .attr("y2", function(d,i) { 
-            return 0;
-            // return yDeliveryScale(d.yIndex); 
-          })
+          .attr("y2", function(d,i) { return 0;})
           .attr("class", "workflow");
-
-      // var workflowsSelectAllText = deliveriesSelectAll.selectAll(".workflow").data(function(d){
-      //   return d.values;
-      // });
-      // workflowsSelectAllText.insert().append("text");
-      // workflowsSelectAllText
-      //     .attr("x",function(d,i){  return xScale(d.endTime); })
-      //     .attr("y",1)
-      //     .text("d1");
 
     }
 
@@ -307,6 +292,8 @@
       deliveriesGroup.attr("transform", "translate(" + [startingX,0] + ")scale(1)");
       stationsGroup.attr("transform", "translate(" + [0,0] + ")scale(1)");
       xAxisGroup.attr("transform", "translate(" + [startingX,innerHeight] + ")scale(1)");
+
+      
     }
 
     function moveXAxis(a,b) {
@@ -325,7 +312,6 @@
         deliveriesGroup.attr("transform", "translate(" + [translation[0],translation[1]] + ")scale(1)");
         stationsGroup.attr("transform", "translate(" + [0,translation[1]] + ")scale(1)");
         xAxisGroup.attr("transform", "translate(" + [translation[0],innerHeight] + ")scale(1)");
-        xAxisTranslation.translate(translation);
       }
     }
 
@@ -335,23 +321,19 @@
       var currentStation = 0;
       var isCurrentUpdated = false;
       var now = new Date(Date.now());
-      console.log('updateCurrentStationCalc',data);
-      // debugger;
+
       //assums workflows are in ascending order
       for (var i = 0; i < data.length; i++) {
         currentStation = 0;
         isCurrentUpdated = false;
-        console.log(now);
         for (var j = 0; j < data[i].values.length; j++) {
            workflow = data[i].values[j];
 
           // debugger;
-          console.log(workflow);
           if(!isCurrentUpdated){
             if(now < workflow.endTime){
               currentStation = workflow.station;
               isCurrentUpdated = true;
-              console.log(currentStation);
             }
           }
 
@@ -376,7 +358,6 @@
         }
 
         data[i].currentStation = currentStation;
-        console.log("setStation:" + currentStation);
 
 
       };
