--- a/timeline.html
+++ b/timeline.html
@@ -60,6 +60,7 @@
   <script src="http://d3js.org/d3.v3.js"></script>
   <script>
     "use strict";
+    console.log('Version 03 04 2016');
     
     //User Defined Variables
     var rowHeight   = 45;
