--- a/timelinePrototype.html
+++ b/timelinePrototype.html
@@ -60,7 +60,7 @@
   <script src="http://d3js.org/d3.v3.js"></script>
   <script>
     "use strict";
-    console.log('Created 03 09 2016');
+    console.log('Version 03 09 2016');
     //User Defined Variables
     var rowHeight   = 45;
     var xAxisHeight = 30;
