apply to main (not prototype)

--- a/timeline.html
+++ b/timeline.html
@@ -303,15 +303,18 @@
       deliveriesGroup.attr("transform", "translate(" + [eventxTranslation,eventyTranslation] + ")scale(1)");
       stationsGroup.attr("transform", "translate(" + [0,eventyTranslation] + ")scale(1)");
       xAxisGroup.attr("transform", "translate(" + [eventxTranslation,innerHeight] + ")scale(1)");
+
       if (panBounds.left > eventxTranslation || eventxTranslation > panBounds.right || eventyTranslation > panBounds.top || eventyTranslation < panBounds.bottom ) {
+        var maxShiftFromTop = stationHeight>outerHeight?panBounds.bottom:0;
         var translation = [
-                            Math.max(Math.min(eventxTranslation, panBounds.right), panBounds.left),
-                            Math.max(Math.min(eventyTranslation, panBounds.top)  , panBounds.bottom),
-                          ];
+          Math.max(Math.min(eventxTranslation, panBounds.right),  panBounds.left),
+          Math.max(Math.min(eventyTranslation, panBounds.top),    maxShiftFromTop)
+        ];
 
         deliveriesGroup.attr("transform", "translate(" + [translation[0],translation[1]] + ")scale(1)");
         stationsGroup.attr("transform", "translate(" + [0,translation[1]] + ")scale(1)");
         xAxisGroup.attr("transform", "translate(" + [translation[0],innerHeight] + ")scale(1)");
+        xAxisTranslation.translate(translation); 
       }
     }
 
