--- a/timeline.html
+++ b/timeline.html
@@ -133,6 +133,21 @@
     var stationStacked=[];
     var panBounds;
 
+    var customShapes = { 
+      lBook: function(r) {
+        var points = [ [0,r], [0,-r], [r,0], [0,r]];
+        return d3.svg.line()(points);
+      },
+      rBook: function(r) {
+        var points = [ [0,r], [0,-r], [-r,0], [0,r]];
+        return d3.svg.line()(points);
+      },
+      // io: function(height, width) {
+      //   var points = [ [0,height], [width*.2,0], [width,0], [width*.8,height], [0,height] ]
+      //   return d3.svg.line()(points);
+      // }
+    }
+
     //scales
     var xScale = d3.time.scale.utc()
           .domain([+new Date(nowYear, nowMonth, nowDay-1,12),                +new Date(nowYear, nowMonth, nowDay+1,12)])
@@ -278,6 +293,18 @@
           .attr("x2", function(d,i) { return xScale(d.endTime); })
           .attr("y2", function(d,i) { return 0;})
           .attr("class", "workflow");
+
+      workflowsSelectAll.append("image")
+          .attr("d", function(d) { return customShapes.lBook;})
+          // .attr("xlink:href","img/icn-vehicle-common.svg")
+          // .attr("height", vehicleShapeH)
+          // .attr("width", vehicleShapeH)
+          // .attr("x",-1*(vehicleShapeH/2))
+          // .attr("y",-1*(vehicleShapeH/2))
+          .attr("class", "blah")
+          .attr("transform", function(d) {
+              return "translate(" + xScale(d.startTime); + "," + 0 + ")"
+            });;
     }
 
     function resize() {
@@ -454,8 +481,17 @@
       else
         return 0;
     }
+
     function isTimeBetweenTime(time, start,end){
       return start <= time && time <= end;
+    }
+
+    function generateShapes(){
+      d3.xml("img/icn-vehicle-common.svg", "image/svg+xml", function(error, xml) {
+        if (error) throw error;
+        console.log(xml.documentElement);
+        return xml.documentElement;
+      });
     }
 
     function generateWorkflows(startOfDayHour){
