--- a/timeline.html
+++ b/timeline.html
@@ -16,12 +16,12 @@
 
     .axis line {
       fill:         none;
-      stroke:       #ffffff;
-      stroke-width: 1.6px;
+      stroke:       #CEE5ED;
+      stroke-width: 1px;
     }
     .axis path {
       fill:            none;
-      stroke:          #ffffff;
+      stroke:          #CEE5ED;
       stroke-width:    2.5px;
       shape-rendering: crispEdges;
     }
@@ -30,26 +30,45 @@
       shape-rendering: crispEdges;
       stroke-width:    1px;
       stroke: white;
-      font-color: #fff;
+      font-color: #CEE5ED;
     }
+    
     .bookEnd {
-      fill:white;
+      fill:#BFFFEA;
     }
+    .bookend.notReached {
+      opacity:0;
+    }
+
     .stations {
     }
     .station{
-      fill:#0C0C1A;
+      fill:#181F2B;
     }
     .station:nth-child(even) {
-      fill:#1A3047;
+      fill:#1B1E23;
     }
     .station .name{
-      fill: white;
+      fill: #BFFFEA;
     }
 
     .workflow {
-      stroke:          steelblue;
+      stroke: #017AAA;
       stroke-width:    1px;
+    }
+    .workflow.ahead {
+      stroke:#00B4C2;
+    }
+    .workflow.late {
+      stroke:#CF0C13;
+    }
+    .workflow.notReached {
+      stroke:#363667;
+      stroke-width:    2px;
+    }
+
+    .yAxis {
+      stroke:#D0D1D1;
     }
 
     svg {
@@ -262,7 +281,7 @@
       // Setup axii
       xAxisGroup.call(xAxis);
       yAxisGroup.append("line")
-          .style("stroke-dasharray", ("2, 2"))
+          .attr("class","yAxis")
           .attr("x1", xScale(now))
           .attr("y1", margin.top)
           .attr("x2", xScale(now))
@@ -296,18 +315,40 @@
           .attr("y1", function(d,i) { return 0;})
           .attr("x2", function(d,i) { return xScale(d.endTime); })
           .attr("y2", function(d,i) { return 0;})
-          .attr("class", "workflow");
+          .attr("class", function(d){
+            if (d.startTime <now) {
+              var state = Math.random();
+              if(state<.25){
+                return "workflow ahead" 
+              } else if (state < .5){
+                return "workflow late"
+              } else {
+                return "workflow"
+              }
+            } else {
+              return "workflow notReached";
+            }
+          });
+
 
       workflowsSelectAllG.append("svg:path")
-          .attr("d", function(d) { console.log('bookend');return customShapes['lBook'](4);})
-          .attr("class", "bookEnd")
+          .attr("d", function(d) { return customShapes['lBook'](4);})
+          .attr("class", function(d){
+            if(d.startTime < now){
+              return "bookEnd notReached";
+            }
+          })
           .attr("transform", function(d) {
               return "translate(" + xScale(d.startTime) + "," + 0 + ")"
             });;
 
       workflowsSelectAllG.append("svg:path")
           .attr("d", function(d) { console.log('bookend');return customShapes['rBook'](4);})
-          .attr("class", "bookEnd")
+          .attr("class", function(d){
+            if(d.endTime < now){
+              return "bookEnd notReached";
+            }
+          })
           .attr("transform", function(d) {
               return "translate(" + xScale(d.endTime) + "," + 0 + ")"
             });;
