--- a/timeline.html
+++ b/timeline.html
@@ -83,6 +83,7 @@
     }
     .workflow.late {
       stroke:#CF0C13;
+      stroke-width:    4px;
     }
     .workflow.notReached {
       stroke:#363667;
@@ -138,7 +139,7 @@
 
       if ((meta = meta[meta.length - 1]) && addEvent in doc) {
         fix();
-        scales = [.25, 1.6];
+        scales = [1, 1];
         doc[addEvent](type, fix, true);
       }
 
@@ -341,16 +342,16 @@
       xAxisGroup      .attr('transform', 'translate(' + startingX + "," +  innerHeight + ')');
 
       // Setup stations overlay and text
-      var stationsSelectAll = stationsGroup.selectAll(".station").data(stationStacked);
-      var stationsSelectAllG = stationsSelectAll.enter().append("g").attr("class", "station"); // stations should never exit
+      var stationsLabelSelectAll = stationsGroup.selectAll(".station").data(stationStacked);
+      var stationsLabelSelectAllG = stationsLabelSelectAll.enter().append("g").attr("class", "station"); // stations should never exit
 
-      stationsSelectAllG.append("rect")
+      stationsLabelSelectAllG.append("rect")
           .attr("x", function(d,i) { return 0;})
           .attr("y", function(d,i) { return d.y0*rowHeight + (rowHeight/2);})
           .attr("width",innerWidth)
           .attr("height", function(d,i) { return d.y*rowHeight;})
 
-      stationsSelectAllG.append("text")
+      stationsLabelSelectAllG.append("text")
           .attr("x", function(d,i) { return stationTextPadding.left;})
           .attr("y", function(d,i) { return d.y0*rowHeight + (rowHeight/2) + stationTextHeight + stationTextPadding.top;})
           .text(function(d,i){return d.name})
@@ -491,7 +492,6 @@
                   });;
 
             }
-            // console.log(header);
           });
 
 
