it doesnt re-center unneccessarily on resizes

--- a/timeline.html
+++ b/timeline.html
@@ -337,8 +337,8 @@
           .attr("width", outerWidth)
           .attr("height", outerHeight);
 
-      stationsGroup   .attr('transform', 'translate(' + 0 + "," + 0 + ')')
-      deliveriesGroup .attr("transform", "translate(" + [startingX,0] + ")scale(1)");
+      // stationsGroup   .attr('transform', 'translate(' + 0 + "," + 0 + ')')
+      // deliveriesGroup .attr("transform", "translate(" + [startingX,0] + ")scale(1)");
       xAxisGroup      .attr('transform', 'translate(' + startingX + "," +  innerHeight + ')');
 
       // Setup stations overlay and text
